templates/mongodb/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeyield-mongodb
  namespace: "default"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "mongodb"
      port: 27017
      targetPort: mongodb
      nodePort: null
  selector:
    app.kubernetes.io/instance: kubeyield
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
