templates/mongodb/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubeyield-mongodb
  namespace: "default"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubeyield
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/component: mongodb
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 27017
